# TaskWeaver_customsAIAgentFramework

./: .gitignore  README.md  pyproject.toml
ai_agents/: agent_communication.py  compiler_agent.py  deconstructor_agent.py  error_handler_agent.py  local_llm_handler.py  sorter_agent.py
ai_agents/worker_agents/: image_processing_agent.py  text_processing_agent.py
api/: main.py  routes.py  websocket_handler.py
config/: database.py  settings.py
database/: models.py  seeds.py
docs/: agent_overview.md  architecture.md
frontend/src/: App.jsx
frontend/src/components/: AgentCard.jsx  CompilerOutput.jsx  Dashboard.jsx  ErrorLog.jsx  TaskQueue.jsx  UserInputForm.jsx
frontend/src/features/agents/: agentsSlice.js
frontend/src/features/errors/: errorsSlice.js
frontend/src/features/user/: userSlice.js
frontend/src/services/: api.js
frontend/src/store/: store.js
optimizations/: priority_queue.py  task_manager.py
tests/: test_api.py  test_deconstructor_agent.py  test_sorter_agent.py  test_worker_agents.py
